--- a/hotels/templates/hotels/hotel_detail.html
+++ b/hotels/templates/hotels/hotel_detail.html
@@ -26,7 +26,7 @@
 
 </div>
 {% comment %} MAP {% endcomment %}
-<div id='map' style='width: 1000px; height:800px;'></div>
+<div id='map' style='width: 1000px; height:500px; margin: auto;'></div>
   <script>
   mapboxgl.accessToken = 'pk.eyJ1IjoicmFuZGF6emxlIiwiYSI6ImNrbG5uM2t2aDAwY2IybnA2bGN1YWF0N3QifQ.r1nyniJdTbVwWclWGc3tWw';
   var map = new mapboxgl.Map({
