--- a/articles/templates/articles/article_list.html
+++ b/articles/templates/articles/article_list.html
@@ -5,8 +5,8 @@
 {% block content %}
 <style>
   body{
-    overflow-x: hidden;
-    margin: ;
+    overflow-x: auto;
+   
   }
 </style>
 <div id="demo" class="carousel slide" data-ride="carousel">
@@ -76,29 +76,13 @@
       </div>
       <div class="row   " style="margin: 0 auto;">
 
-        <!-- {% for cardd in cards %}
-        <div class="col-lg-4 col-md-4 col-12">
-          <div class="card mb-3" style="width:400px; height: 550px;border-radius: 50px;">
-              <img class="card-img-top" src="{{ cardd.thumb.url }}" alt="Card image" style="height:200px; border-radius:50px;border-bottom-left-radius:00px;box-shadow: 2px 3px 5px rgb(49, 49, 49);  ">
-              <div class="card-body">
-                <h4 class="card-title">{{ cardd.title }}</h4>
-                <div  style="background-image: linear-gradient(to right,rgb(0, 0, 0), rgb(0, 0, 0,0)); height: 2px; margin: 10px;margin-left: -3px;">
-                  <hr style="opacity: 0;">
-                </div>
-                <p class="card-text">{{ cardd.snippet }}</p>
-                <div class="align-self-start">
-                  <a href="{% url 'articles:detail' slug=cardd.slug %}" class="btn btn-dark stretched-link">More</a>
-                </div>
-              </div>
-          </div>
-        </div>
-        {% endfor %} -->
+        
 
         {% comment %}   RECOMMENDED ARTICLES  {% endcomment %}
         {% if user.is_authenticated %}
           {% for rec in recommend %}
           <div style="margin: auto;">
-          <div class="col-lg-4 col-md-4 col-12" style="padding-top: 10px;padding-bottom: 10px;" >
+          <div class="col-lg-4 col-md-4 col-12" style="padding-top: 10px;padding-bottom: 10px; text-align: center;" >
               <div class="card " style="width:400px; height: 550px;border-radius: 50px;">
                   <img class="card-img-top" src="{{ rec.thumb.url }}" alt="Card image" style="height:200px; border-radius:50px;border-bottom-left-radius:00px;box-shadow: 2px 3px 5px rgb(49, 49, 49);  ">
                   <div class="card-body">
@@ -108,7 +92,7 @@
                     </div>
                     <p class="card-text" >{{ rec.snippet }}</p>
                         <div>
-                          <a style="position: absolute; bottom: 20px;" href="{% url 'articles:detail' slug=rec.slug %}" class="btn btn-dark">More</a>
+                          <a style="position: absolute; bottom: 20px;left: 42%;" href="{% url 'articles:detail' slug=rec.slug %}" class="btn btn-dark">More</a>
                         </div>
                   </div>
               </div>
@@ -174,8 +158,8 @@
               <p style="color: silver;">
                 {{ article.snippet }}
               </p>
-              <button  class="btn bg-dark text-white"><a  class="text-light" href="{% url 'articles:detail' slug=article.slug %}">Read More</a></button>
-            
+              <a  style="color:silver; border:2px double silver; padding: 10px; border-radius: 10px;text-decoration: none;" onmouseover="this.style.color='black'; style.background ='silver' " onmouseout="style.background ='black'; this.style.border= '2px double silver';this.style.color='silver' " href="{% url 'articles:detail' slug=article.slug %}">Read More</a>
+              
             </div>
             <div  style="background-image: linear-gradient(to right, rgb(0, 0, 0,0),silver, rgb(0, 0, 0,0)); height: 1px;margin-top: 10px;margin-bottom: 38px;">
             <hr style="opacity: 0;">
@@ -191,7 +175,7 @@
     </div>
   </section>
 
-  <div id='map' style='width: 1000px; height:800px;'></div>
+  <!-- <div id='map' style='width: 1000px; height:800px;'></div>
   <script>
   mapboxgl.accessToken = 'pk.eyJ1IjoicmFuZGF6emxlIiwiYSI6ImNrbG5uM2t2aDAwY2IybnA2bGN1YWF0N3QifQ.r1nyniJdTbVwWclWGc3tWw';
   var map = new mapboxgl.Map({
@@ -208,6 +192,6 @@
   .setLngLat([85.30802979343552, 27.69433994955253])
   .setPopup(popup)
   .addTo(map);
-  </script>
+  </script> -->
 
 {% endblock %}
