--- a/hotels/templates/hotels/hotels_list.html
+++ b/hotels/templates/hotels/hotels_list.html
@@ -9,18 +9,20 @@
     margin: ;
   }
 </style>
-
+<div style="margin-top: 65px; text-align: center;">
+  <div  style="width: 35%; background-image: linear-gradient(to right,rgb(0, 0, 0,0) ,silver, rgb(0, 0, 0,0) ); height: 2px;; margin:auto;">
+  <hr style="opacity: 0;">
+</div>
+  <h2 style="margin:20px;color: silver;">Hotels</h2>
+  <div  style=" background-image: linear-gradient(to right,rgb(0, 0, 0,0) ,silver, rgb(0, 0, 0,0) ); height: 2px; margin:auto;width: 35%;">
+  <hr style="opacity: 0;">
+</div>
+</div>
 <!-- Cards -->
 
   <section class="mb-4 ml-3 mr-3" style="display: inline; justify-content: center;">
     <div class="container-fluid">
-      <div  style="background-image: linear-gradient(to right, rgb(0, 0, 0,0),silver, rgb(0, 0, 0,0)); height: 2px;margin: 10px;margin-bottom: 25px; ">
-        <hr style="opacity: 0;">
-      </div>
-      <h1 class="text-center text-light text-capitalizeb pt-5"style="margin-top:-60px;" >Hotels</h1>
-      <div  style="background-image: linear-gradient(to right, rgb(0, 0, 0,0),silver, rgb(0, 0, 0,0)); height: 2px;margin-top: 10px;margin-bottom: 38px;">
-        <hr style="opacity: 0;">
-      </div>
+      
       <div class="row   " style="margin: 0 auto;">
 
         <!-- {% for cardd in cards %}
@@ -52,7 +54,8 @@
               <p style="color: silver;">
                 {{ hotel.snippet }}
               </p>
-              <button  class="btn bg-dark text-white"><a  class="text-light" href="{% url 'hotels:hotel_detail' slug=hotel.slug %}">Read More</a></button>
+              <a  style="color:silver; border:2px double silver; padding: 10px; border-radius: 10px;text-decoration: none;" onmouseover="this.style.color='black'; style.background ='silver' " onmouseout="style.background ='black'; this.style.border= '2px double silver';this.style.color='silver' " href="{% url 'hotels:hotel_detail' slug=hotel.slug %}">Read More</a>
+              
             
             </div>
             <div  style="background-image: linear-gradient(to right, rgb(0, 0, 0,0),silver, rgb(0, 0, 0,0)); height: 1px;margin-top: 10px;margin-bottom: 38px;">
