Added hotels link in hotel_detailhtml

--- a/hotels/templates/hotels/hotel_detail.html
+++ b/hotels/templates/hotels/hotel_detail.html
@@ -24,6 +24,10 @@
 		 {{hotel.body}}
   	</p> 
 
+    <p class="" style="color: silver; margin: 20px;">
+		 <a href="{{hotel.url}}">Read More</a>
+  	</p> 
+
 </div>
 {% comment %} MAP {% endcomment %}
 <div id='map' style='width: 1000px; height:500px; margin: auto;'></div>
