--- a/templates/Navbar.html
+++ b/templates/Navbar.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Tourism Aid</title>
+	<title>Tourist Guide</title>
     
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -30,7 +30,7 @@
 
                         <!-- logo -->
             <a style="z-index: 1;" class="navbar-brand" href="{% url 'articles' %}">
-                <img src="{% static 'logo_big.png'%}" width="300 " height="050" class="d-inline-block align-top" alt="">
+                <img src="{% static 'logo.png'%}" style="height: 50px;" class="d-inline-block align-top" alt="">
                 </a>
 
 
