--- a/articles/templates/articles/article_list.html
+++ b/articles/templates/articles/article_list.html
@@ -87,13 +87,12 @@
                   <img class="card-img-top" src="{{ rec.thumb.url }}" alt="Card image" style="height:200px; border-radius:50px;border-bottom-left-radius:00px;box-shadow: 2px 3px 5px rgb(49, 49, 49);  ">
                   <div class="card-body">
                     <a style="color:black ;text-decoration: none; " href="{% url 'articles:detail' slug=rec.slug %}" class="card-title"><h4>{{ rec.title }}</h4></a>
-                    <div  style="background-image: linear-gradient(to right,rgb(0, 0, 0), rgb(0, 0, 0,0)); height: 2px; margin: 10px;margin-left: -3px;">
+                    <div  style="background-image: linear-gradient(to right,rgb(0, 0, 0,0),rgb(0, 0, 0), rgb(0, 0, 0,0)); height: 2px; margin: 10px;margin-left: -3px;">
                       <hr style="opacity: 0;">
                     </div>
                     <p class="card-text" >{{ rec.snippet }}</p>
                         <div>
-                          <a style="position: absolute; bottom: 20px;left: 42%;" href="{% url 'articles:detail' slug=rec.slug %}" class="btn btn-dark">More</a>
-                        </div>
+                          <a  style="color:rgb(56, 55, 55); border: 2px double rgb(56, 55, 55); padding-left: 20px; padding-right: 20px;padding-top: 10px;padding-bottom: 10px; border-radius: 10px;text-decoration: none;margin: auto;" onmouseover="style.background ='black'; this.style.border= '2px double silver';this.style.color='white' " onmouseout="style.background ='white'; this.style.border= '2px double rgb(56, 55, 55)';this.style.color='silver';this.style.color='rgb(56, 55, 55)' "href="{% url 'articles:detail' slug=rec.slug %}">Read More</a>                        </div>
                   </div>
               </div>
             </div>
