--- a/templates/bs_base_layout.html
+++ b/templates/bs_base_layout.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Tourism Aid</title>
+	<title>Tourist Guide</title>
 		<link rel="icon" type="image/ico" href="media/favicon.ico" />
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
