--- a/templates/home.html
+++ b/templates/home.html
@@ -2,10 +2,10 @@
 {% load static %}
 {% block content %}
 <link rel="stylesheet" href="{% static 'Home.css' %}">
-<ul style="text-align:center;margin-top: 50px; padding: 0px;">
+<ul style="text-align:center;margin: 20px; padding: 0px;">
     {% comment %} yo hello wala line chahi nav bar ko pachadi airachha hai kina ho, tesaile landing page ma dekhdaina {% endcomment %}
     <a class="navbar-brand" href="{% url 'articles' %}">
-        <img src="{% static 'intro.png'%}"  style="height: 150px;" alt="">
+        <img src="{% static 'logo.png'%}"  style="height: 150px; margin-top: 45px;" alt="">
         </a>
         <h5 style="padding-top: 6px;padding-left:5px ; color: silver;">'Get Travel Recommendations'</h4>
 <div  style=" opacity: 0.1; background-image: linear-gradient(to right,rgb(0, 0, 0,0), silver 50%, rgb(0, 0, 0,0)); height: 2px;margin: 10px;">
@@ -30,7 +30,7 @@
 
 <div onmouseover="this.style.color='black'; style.background ='silver' " onmouseout="style.background ='black'; this.style.border= '2px double silver' "  style="width:15%;padding:-15px; margin:auto; border-radius:10px; border: '2px solid silver'" >
         <div style="transition: 1s; border: 2px solid silver; border-radius: 10px;width: 100%;height: 100%; padding: 8px;" onmouseout="style.border='0px solid black' " >
-          <a class="nav-link" onmouseover="this.style.color='black';" style="text-align: center;color: silver; " onmouseout="this.style.color='silver';" href="{% url 'articles' %}" style="color: silver; ">Go To Home Page</a>
+          <a class="nav-link" onmouseover="this.style.color='black';" style="text-align: center;color: silver; " onmouseout="this.style.color='silver';" href="{% url 'articles' %}" style="color: silver; text-align: center;padding: auto; ">Go To Home Page</a>
         </div>
 </div>    
 
