--- a/articles/templates/articles/article_list.html
+++ b/articles/templates/articles/article_list.html
@@ -66,7 +66,7 @@
 <!-- Cards -->
 
   <section class="mb-4 ml-3 mr-3" style="display: inline; justify-content: center;">
-    <div class="container-fluid">
+    <div class="container-fluid" ">
       <div  style="background-image: linear-gradient(to right, rgb(0, 0, 0,0),silver, rgb(0, 0, 0,0)); height: 2px;margin: 10px;margin-bottom: 25px; ">
         <hr style="opacity: 0;">
       </div>
@@ -83,7 +83,7 @@
           {% for rec in recommend %}
           <div style="margin: auto;">
           <div class="col-lg-4 col-md-4 col-12" style="padding-top: 10px;padding-bottom: 10px; text-align: center;" >
-              <div class="card " style="width:400px; height: 550px;border-radius: 50px;">
+              <div class="card " style="width:400px; height: 550px;border-radius: 50px;box-shadow:3px 2px 10px rgb(97, 96, 96);">
                   <img class="card-img-top" src="{{ rec.thumb.url }}" alt="Card image" style="height:200px; border-radius:50px;border-bottom-left-radius:00px;box-shadow: 2px 3px 5px rgb(49, 49, 49);  ">
                   <div class="card-body">
                     <a style="color:black ;text-decoration: none; " href="{% url 'articles:detail' slug=rec.slug %}" class="card-title"><h4>{{ rec.title }}</h4></a>
